--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scribd codemod",
   "main": "src/index.js",
   "scripts": {
-    "shift": "jscodeshift"
+    "shift": "jscodeshift -t src/transform.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/ericyang321/scribd_mod#readme",
   "dependencies": {
-    "jscodeshift": "0.3.32"
+    "jscodeshift": "0.3.32",
+    "jscodeshift-helper": "1.1.0",
+    "prettier": "1.8.2"
   }
 }
